fix gallery wrapping, begin restyling create view

--- a/client/src/components/styles/imgCanvas.css
+++ b/client/src/components/styles/imgCanvas.css
@@ -8,15 +8,25 @@
 }
 
 .overlay {
+  display: inline;
+  margin-left: -300px;
+  opacity: 0;
   background-color: black;
+  cursor: pointer;
+  z-index: 1;
   width: 300px;
   height: 300px;
-  cursor: pointer;
-  margin: -318px 0px 0px 16px;
-  z-index: 1;
+  transition: opacity 150ms ease;
+}
+
+.overlay:hover {
   opacity: 0.9;
+  transition: opacity 150ms ease;
 }
 
 .canvasCard {
-  composes: canvasCard from './canvas.css';
+  composes: container from './galleryCard.css';
+  display: flex;
+  box-shadow: 0 0 3px 3px rgba(0,0,0,0.23);
+  
 }
