--- a/client/src/containers/styles/control.css
+++ b/client/src/containers/styles/control.css
@@ -1,4 +1,8 @@
 .container {
+  margin: 15px 10px 10px 10px;
+  width: 300px;
+  height: 300px;
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  justify-content: space-between;
 }
