--- a/client/src/containers/styles/gallery.css
+++ b/client/src/containers/styles/gallery.css
@@ -3,6 +3,14 @@
   justify-content: center;
 }
 
+.contentBox {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content:center;
+  width: 960px;
+
+}
+
 :global(.fade-enter) {
   opacity: 0.01;
 }
